# dyad

./: .gitignore  CMakeLists.txt
src/: dyad.c  dyad.h
